# poetry

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/agents/: base.py  contestant.py  judge.py  organizer.py  scorekeeper.py  tools.py
backend/app/graph/: contest.py  deliberation.py  memory.py  state.py
backend/app/ws/: manager.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AgentPanel.tsx  ControlBar.tsx  FeedBubble.tsx  MentionHighlight.tsx  MessageFeed.tsx  ModelDropdown.tsx  PersonalityModal.tsx  ScoreBoard.tsx  UserInputColumn.tsx
frontend/src/hooks/: useContestStore.ts  useWebSocket.ts
frontend/src/styles/: global.css  grid.css
